--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.4.0",
-    "chart.js": "^2.9.4",
-    "formik": "^2.4.2",
     "react": "^16.14.0",
-    "react-chartjs-2": "^2.11.2",
     "react-dom": "^16.14.0",
     "react-redux": "^8.1.1",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
-    "reselect": "^4.1.8",
+    "saas": "^1.0.0",
     "sass": "^1.64.1",
-    "styled-components": "^6.0.5",
-    "yup": "^1.2.0"
+    "styled-components": "^6.0.5"
   },
   "devDependencies": {
     "react-scripts": "^3.4.0"
